# tauri_deno_mobile_sample

./: .gitignore  README.md  build.ts  bundle.ts  deno.json  import_map.json
scripts/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: desktop.rs  lib.rs  main.rs
src-www/: index.html  index.tsx  main.js
